--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -3,8 +3,8 @@
 
 \newcommand{\pskip}{\vskip 0.1 in}
 
-\newtheorem{theorem9}{Robinson's Arclength Theorem for Cycloids Generalized}
-\newtheorem{theorem10}{An Arclength Theorem for Epi and Hypocycloids}
+\newtheorem{theorem9}{Robinson's Arclength Theorem for Prolate Cycloids}
+\newtheorem{theorem10}{An Arclength Theorem for Prolate Epi and Hypocycloids}
 
 \begin{document}
 \begin{abstract}
@@ -79,7 +79,7 @@ s_1 - s_2 = s_3.
 
 Our proof of this theorem relies heavily on the instantaneous center of rotation. We introduce this idea next. %Readers familiar with this idea might skip the next section and move directly to the proof.
 
-\section{Preliminaries}
+\section{The Instantaneous Center of Rotation}
 From the \emph{CarTalk} puzzler archives, May 15, 2006:
 
 \small{{\bf RAY:} A car is traveling at 60 mph. You're standing by the side of the road, or lying on the road as the case may be. Can you name a part, or parts, of the car, that are not moving in relation to the road?
@@ -173,7 +173,7 @@ Rolling a book along the tops of two cyinders (oatmeal containers work well) is 
 \end{enumerate}
 
 
-\section{A Proof}
+\section{A Proof of Robinson's Theorem}
 
 \begin{proof}
 To prove the arclength theorem, imagine three circles ${\cal C}_i$, $i=1,2,3$, rolling along the $x$-axis as the points $P_i$ (at rest in the reference frames of these circles) respectively sweep out the upper and lower parts of the prolate cycloid and its sister cycloid.  We suppose the segments $\overline{Q_iP_i}$ from the centers of rotation to the tracing points make the same angle $\phi$ with the vertical at all times as in Figure 3.
@@ -324,7 +324,7 @@ among the radii of curvature of the upper/llower prolate and ordinary cycloids a
 
 
 
-\section{A Generalization}
+\section{Prolate Epicycloids}
 A classic problem asks how many rotations a quarter makes as it rolls once around another. 
 
 The surprising answer is two. As the quarter rolls through its circumference raround the fixed quarter below, it makes one clockwise rotation in the reference frame of the rolling tangent line. But since this tangent makes one clockwise rotation in the reference frame of the fixed quarter, the rolling quarter makes two rotations as it rolls once around the other. 
@@ -572,7 +572,7 @@ But why? It turns out that these particular tangent segments to the ellipse
 
 %\href{https://www.desmos.com/calculator/yillqxp8mg}{Wrapping Cycloids Around Circles Ellipse 2B}
 
-
+\section{Double Generation Theorem}
 Double Generation:
 
 \begin{onlineOnly}
@@ -724,11 +724,13 @@ Global Statement: When $b<a$ the curtate $(a,b)$-cycloid has inflection points. 
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{7qhymuu03y}{900}{600}   
+\desmos{h5df8repfp}{900}{600}   
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/7qhymuu03y}{Curtate Cycloid Arclength 2}
+\href{https://www.desmos.com/calculator/h5df8repfp}{Curtate Cycloid Arclength 3}
+
+h5df8repfp
 
 Locally, it looks like the difference
 \[
