--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -730,7 +730,18 @@ Global Statement: When $b<a$ the curtate $(a,b)$-cycloid has inflection points. 
 
 \href{https://www.desmos.com/calculator/h5df8repfp}{Curtate Cycloid Arclength 3}
 
-h5df8repfp
+
+Here's another version of the worksheet.
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{rytjk2xes8}{900}{600}   
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/rytjk2xes8}{Curtate Cycloid Arclength 4}
+
+
 
 Locally, it looks like the difference
 \[
@@ -740,8 +751,17 @@ in the upper and lower arclengths between inclination angles $0$ and $\phi$ is e
 
 It looks like the difference is equal to the arclength of the ordinary $b$-cycloid between inclination anlges $0$ and 
 \[
-    \phi^* = \arcsin\left( \frac{a}{b}\sin\phi \right) .
+    \phi^* = \arcsin\left( \frac{a}{b}\sin\phi \right) = \alpha .
 \]
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{blx43t49kj}{900}{600}   
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/blx43t49kj}{Ellipse Doubly Generated 2}
 
 
 
