--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -29,5 +29,6 @@ started with Ximera for course instructors.
 \activity{Hodograph/Hodograph}
 \activity{FallingSlinky/FallingSlinky}
 \activity{LimaconCycloid/LimaconCycloid}
+\activity{CycloidLength/CycloidLength}
 
 \end{document}
