--- a/FirstActivity/FirstActivity.tex
+++ b/FirstActivity/FirstActivity.tex
@@ -140,7 +140,7 @@ Access Desmos interactives through the online version of this text at
  
 \begin{onlineOnly}
     \begin{center}
-\desmos{2apdkp8rwe}{450}{600} \desmos{2apdkp8rwe}{450}{600}
+\desmos{2apdkp8rwe}{450}{600} 
 \end{center}
 \end{onlineOnly}
 \end{exploration}
@@ -169,8 +169,6 @@ c. Move along the axis of symmetry to the point with $y$-coordinate $y=1/(2a)$.
 \pskip
 
 d. Move to the $x$-axis, along the lines with slopes $\pm \sqrt{b^2-4ac}$, thereby landing at the intercepts.
-
-
 
 
 
@@ -238,6 +236,10 @@ First guess what happens to $Q$ as $P$ approaches $O$. Then drag the slider $x_0
 
 \end{exercise}
 
+Click on the blue arrow at the right to see a geometric interpretation of 
+\[
+ \Delta x =  - \frac{b}{2a} .
+\]
 
 \begin{expandable}
 The normal line to the parabola at $(0,b)$ has slope $m_\perp = -1/b$. 
@@ -259,15 +261,12 @@ Access Desmos interactives through the online version of this text at
  
 \begin{onlineOnly}
     \begin{center}
-\desmos{1kxcom3p2t}{450}{600} \desmos{1kxcom3p2t}{450}{600}
+\desmos{1kxcom3p2t}{450}{600} 
 \end{center}
 \end{onlineOnly}
 \end{exploration}
 
-
 \href{https://www.desmos.com/calculator/1kxcom3p2t}{Calculus and the Quadratic Formula 22}
-
-
 
 \end{expandable}
 
@@ -283,16 +282,46 @@ What the units here? And can you think of a geometric interpretation relevant to
 \]
 And what about its meaning?
 \end{enumerate}
-
-
 \end{enumerate}
 
 
+\emph{Summary:}
+
+From the pespective of a Math 151 student, the quadratic formula gives these directions to find the $x$-intercepts of the parabola $y=c+bx +ax^2$.
+
+\begin{enumerate}
+\item Start at the $y$-intercept $Q(0,c)$.
+
+
+\item Then move along the normal at $Q$ until the $y$-coordinate changes by $1/(2a)$, thereby landing on the axis of symmetry. 
+
+\item Now move vertically along the axis of symmetry to the point $R$ with $y$-coordinate $y=1/(2a)$.
+
+\item Next draw all lines through $R$ normal to the parabola. There are two possibilities.
+
+\begin{enumerate}
+
+\item There is only one such line. If so, remain at $R$. If by chance $R$ also lies on the $x$-axis you have found the unique $x$-intercept of parabola. If not, stop your search. There are no $x$-intercepts.
+
+
+\item There are two additional normal lines through $R$. If so, move along these until you hit the parabola. Then stop. You have reached the $x$-intercepts.
+
+\end{enumerate}
+\end{enumerate}
+
+\begin{exploration}
+\begin{onlineOnly}
+    \begin{center}
+\desmos{j980gbvqm6}{450}{600} 
+\end{center}
+\end{onlineOnly}
+\end{exploration}
+
+\href{https://www.desmos.com/calculator/j980gbvqm6}{Calculus and the Quadratic Formula 23}
 
 
 
-
-\section{Cylindder}
+\section{Cylinder}
 
 
 \begin{exploration}\label{exp:orth1}
