--- a/Hodograph/Hodograph.tex
+++ b/Hodograph/Hodograph.tex
@@ -14,6 +14,10 @@ Just write something.
 
 Hamilton first shows that the hodograph of a planetary orbit is a circle by proving the hodograph has constant curvature. Not quite sure yet what he does, but here's a quick way.
 
+His first step is to show the hodograph is a circle. 
+
+The second step is to show the orbit is a conic section. We can shorten Hamilton's geometric argument considerably by appealing to the polar equation of a conic section.
+
 For a motion in the plane with position function ${\bf p} = {\bf p}(t)$, the hodograph is the curve ${\bf v} =d{\bf p}/dt$ traced by the tip of the pinned velocity vector. Write the acceleration as
 \[
    {\bf a} = \frac{d{\bf v}}{dt} =  a \langle \cos\phi , \sin \phi   \rangle ,
@@ -37,6 +41,20 @@ Next assuming that accelaration has magnitude $k/r^2$ for some constant $k$ with
   ds = 
 \] 
 along the hodograph
+
+
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{besggxgqus}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/besggxgqus}{Hamilton Hodograph 1}
+
+
+
 
 
 \end{document}
